# rexer

./: .gitignore  CMakeLists.txt  README.md  hello.cpp  target_public_headers.cmake  world.cpp
include/rexer/: Rexer.h  RexerResult.h  Token.h  hello.h
include/rexer/rule/: Group.h  Multiple.h  Optional.h  Or.h  Ref.h  Regex.h  Rule.h  Run.h  Skip.h  Word.h
install/include/rexer/: world.h
install/include/rexer/test/: helloworld.h
install/lib/cmake/rexer/: rexer-config-debug.cmake  rexer-config.cmake
src/: CMakeLists.txt  Rexer.cpp  RexerResult.cpp  Token.cpp  hello.cpp  world.cpp
src/rule/: Group.cpp  Multiple.cpp  Optional.cpp  Or.cpp  Ref.cpp  Regex.cpp  Rule.cpp  Run.cpp  Skip.cpp  Word.cpp
src/test/: helloworld.cpp
test/: helloworld.cpp  helloworld.h
